--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/thymeleaf_adv_lab_exam_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=m!5Q2@bYTq
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=TRUE
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+logging.level.org=WARN
+logging.level.blog=WARN
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor=TRACE
+server.port=8000
