Full homepage html and css + basic database entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/thymeleaf_adv_lab_exam_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/playing_cards_shop?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=m!5Q2@bYTq
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
