--- a/build.gradle
+++ b/build.gradle
@@ -13,18 +13,14 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.security:spring-security-crypto:5.6.3'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.6.6'
-    implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.15.RELEASE'
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
 }
