--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,40 +1,48 @@
-logging:
-    level:
-        blog: WARN
-        org: WARN
-        org.hibernate.SQL: DEBUG
-server:
-    port: 8000
-spring:
-    datasource:
-        driverClassName: com.mysql.cj.jdbc.Driver
-        password: m!5Q2@bYTq
-        url: jdbc:mysql://localhost:3306/playing_cards_shop?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
-        username: root
-    jpa:
-        hibernate:
-            ddl-auto: create-drop
-        open-in-view: false
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.MySQL8Dialect
-                format_sql: true
-        defer-datasource-initialization: true
-    servlet:
-        multipart:
-            max-file-size: 1MB
-            max-request-size: 5MB
-    mvc:
-        hiddenmethod:
-            filter:
-                enabled: true
+#logging:
+#    level:
+#        blog: WARN
+#        org: WARN
+#        org.hibernate.SQL: DEBUG
+#spring:
+#    servlet:
+#        multipart:
+#            max-file-size: 1MB
+#            max-request-size: 5MB
+#    mvc:
+#        hiddenmethod:
+#            filter:
+#                enabled: true
 
-    sql:
-        init:
-            mode: always
+#    sql:
+#        init:
+#            mode: always
 
 #Cloudinary Properties
-    #cloudinary:
-        #api-key:
-        #api-secret:
-        #cloud-name:
+#cloudinary:
+#api-key:
+#api-secret:
+#cloud-name:
+
+
+
+server:
+  port: 8000
+
+spring:
+  datasource:
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/mobilele?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+    username: root
+    password: m!5Q2@bYTq
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
+  jpa:
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      ddl-auto: create-drop
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
