--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
-    plugins {
-    id 'org.springframework.boot' version '2.6.6'
+plugins {
+    id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -13,7 +13,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.security:spring-security-crypto:5.6.3'
+    implementation 'org.springframework.security:spring-security-crypto:5.7.1'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
