--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.modelmapper:modelmapper:3.1.0'
+    implementation 'com.cloudinary:cloudinary:1.0.14'
+
+    annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
 
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
