--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,6 +48,6 @@ spring:
       mode: always
 
 cloudinary:
-  api-key: dykamqwpf
-  api-secret: 123169491616986
-  cloud-name: PKOdQAluFqeXPcOBQ0g451Vx4CI
+  api-key: 123169491616986
+  api-secret: PKOdQAluFqeXPcOBQ0g451Vx4CI
+  cloud-name: dykamqwpf
