--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,30 +1,3 @@
-#logging:
-#    level:
-#        blog: WARN
-#        org: WARN
-#        org.hibernate.SQL: DEBUG
-#spring:
-#    servlet:
-#        multipart:
-#            max-file-size: 1MB
-#            max-request-size: 5MB
-#    mvc:
-#        hiddenmethod:
-#            filter:
-#                enabled: true
-
-#    sql:
-#        init:
-#            mode: always
-
-#Cloudinary Properties
-#cloudinary:
-#api-key:
-#api-secret:
-#cloud-name:
-
-
-
 server:
   port: 8000
 
@@ -42,7 +15,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     defer-datasource-initialization: true
   sql:
     init:
