--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,11 @@ dependencies {
     implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.32.2'
 
     annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
-
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+}
 
+tasks.named('test') {
+    useJUnitPlatform()
 }
